# alexa_media_player

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  .yamllint  CHANGELOG.md  README.md  __init__.py  alexa_media.py  configuration.yaml  const.py  custom_components.json  en.json  hacs.json  info.md  inlang.config.js  media_player.py  pylintrc  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  develop.sh
.github/: config.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: autocloser.yaml  codeql-analysis.yml  hacs_validate.yaml  hassfest.yaml  lokalize.yml  moderate.yaml  pre-commit.yml  release.yml  semantic_release.yml  stale.yml  test.yml  validate.yaml
.github/workflows/poetry-composite-action/: action.yaml
.translations/: de.json  en.json  it.json  nl.json  pl.json  zh-Hans.json
alexa_media/: __init__.py  alarm_control_panel.py  const.py  manifest.json  media_player.py  notify.py  services.yaml
custom_components/alexa_media/: __init__.py  alarm_control_panel.py  alexa_entity.py  alexa_media.py  binary_sensor.py  config_flow.py  configurator.py  const.py  coordinator.py  diagnostics.py  entity.py  exceptions.py  helpers.py  light.py  manifest.json  media_player.py  metrics.py  notify.py  runtime_data.py  secure_store.py  sensor.py  services.py  services.yaml  strings.json  switch.py  translations
custom_components/alexa_media/.translations/: de.json  en.json  es.json  fr.json  it.json  nb.json  nl.json  pl.json  ru.json  zh-Hans.json
custom_components/alexa_media/translations/: ar.json  de.json  en.json  es.json  fr.json  it.json  ja.json  nb.json  nl.json  pl.json  pt-BR.json  pt-br  pt.json  pt_BR.json  pt_PT.json  ru.json  sv.json  zh-Hans.json
custom_components/alexa_media_secure/: __init__.py  alarm_control_panel.py  alexa_entity.py  alexa_media.py  config_flow.py  const.py  diagnostics.py  exceptions.py  helpers.py  manifest.json  media_player.py  sensor.py  services.py  services.yaml  strings.json  switch.py
custom_components/alexa_media_secure/translations/: es.json  it.json  ja.json  pl.json  ru.json
media_player/: alexa.py  alexa_media.py
tests/: setup.sh  test_alarm_control_panel.py  test_alexa_entity.py  test_config_flow.py  test_const.py  test_diagnostics.py  test_exceptions.py  test_helpers.py  test_init_split.py  test_migration.py  test_notify.py  test_remove_entry.py  test_secure_store.py  test_sensor.py  test_sensor_snooze.py  test_switch.py  test_timedelta_migration.py
translations/: ar.json  de.json  en.json  es.json  fr.json  it.json  ja.json  nb.json  nl.json  pl.json  pt-BR.json  pt.json  ru.json  sv.json  zh-Hans.json
