[tool.poetry]
name = "alexa_media_player"
version = "4.12.6"
description = "This is a custom component to allow control of Amazon Alexa devices in [Homeassistant](https://home-assistant.io) using the unofficial Alexa API."
authors = [
  "Keaton Taylor <keatonstaylor@gmail.com>",
  "Alan D. Tse <alandtse@gmail.com>",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
alexapy = "1.28.2"
aiohttp = ">=3.10.1"
packaging = ">=20.3"
wrapt = ">=1.14.0"

[tool.poetry.group.dev.dependencies]
homeassistant = ">=2023.9.3"
pytest-homeassistant-custom-component = ">=0.13.57"
black = { version = ">=24.8", allow-prereleases = true }
pre-commit = ">=2.11.1"
prospector = { extras = ["with_all"], version = ">=1.8.3" }
pytest-cov = "*"
safety = ">1.8.7"
pytest = ">6.2.2"
codespell = ">2.0.0"
yamllint = ">1.26.0"
pyupgrade = "^3.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | deps
  | alexapy/aiohttp           # also separately exclude a file named deps in
                     # the root of the project
)
'''

[tool.codespell]
skip = './.*,*.csv,*.json,*.lock'
quiet-level = 2
ignore-words-list = "hass"
