[tool.poetry]
name = "alexa_media_player"
version = "4.12.6"
description = "This is a custom component to allow control of Amazon Alexa devices in [Homeassistant](https://home-assistant.io) using the unofficial Alexa API."
authors = [
  "Keaton Taylor <keatonstaylor@gmail.com>",
  "Alan D. Tse <alandtse@gmail.com>",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
alexapy = "1.28.2"
aiohttp = ">=3.8.5"
packaging = ">=20.3"
wrapt = ">=1.14.0"
yarl = ">=1.9.2, <2.0.0"
urllib3 = ">=1.26.5, <2.0"
requests = ">=2.31.0"
cryptography = ">=42.0.2"
attrs = ">=22.2.0"
numpy = ">1.23.2"
home-assistant-bluetooth = "1.12.2"

[tool.poetry.group.dev.dependencies]
homeassistant = ">=2024.8.0"
pytest-homeassistant-custom-component = ">=0.13.0"
black = { version = ">=24.8", allow-prereleases = true }
pre-commit = ">=2.11.1"
prospector = { extras = ["with_all"], version = ">=1.8.3" }
pytest-cov = "*"
safety = ">1.8.7"
pytest = ">=7.3.1"
codespell = ">2.0.0"
yamllint = ">1.26.0"
pyupgrade = "^3.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | deps
  | alexapy/aiohttp           # also separately exclude a file named deps in
                     # the root of the project
)
'''

[tool.codespell]
skip = './.*,*.csv,*.json,*.lock'
quiet-level = 2
ignore-words-list = "hass"
