[tool.poetry]
name = "alexa_media_player"
version = "5.14.0"
description = "This is a custom component to allow control of Amazon Alexa devices in [Homeassistant](https://home-assistant.io) using the unofficial Alexa API."
authors = [
  "Keaton Taylor <keatonstaylor@gmail.com>",
  "Alan D. Tse <alandtse@gmail.com>",
]
license = "Apache-2.0"
packages = [
    { include = "custom_components/alexa_media" }
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
alexapy = "1.29.17"
aiohttp = ">=3.8.1"
packaging = ">=20.3"
wrapt = ">=1.12.1"
dictor = ">=0.1.12,<0.2"

[tool.poetry.group.dev.dependencies]
homeassistant = ">=2025.2.0"
pytest-homeassistant-custom-component = ">=0.13.107"
black = { version = ">=21.12b0", allow-prereleases = true }
pre-commit = ">=2.11.1"
prospector = { extras = ["with_all"], version = ">=1.8.3" }
pytest-cov = "*"
safety = ">=3.2.9"
pytest = ">6.2.2"
codespell = ">2.0.0"
yamllint = ">1.26.0"
pyupgrade = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = [
  "pyproject.toml:tool.poetry.version"
]
version_variables = [
  "custom_components/alexa_media/const.py:VERSION",
  "custom_components/alexa_media/manifest.json:version"
]
upload_to_pypi = false
upload_to_release = false
changelog_sections = "feature,fix,breaking,documentation,performance,refactor"
build_command = "echo"
branch = "main"
commit_subject = "[skip ci] {version}"

[tool.black]
line-length = 88
target-version = ['py313']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | deps
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
indent = "    "
force_sort_within_sections = true
sections = ["FUTURE", "STDLIB", "THIRD-PARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRD-PARTY"
known_first_party = ["alexa_media", "tests"]
forced_separate = ["tests"]
combine_as_imports = true

[tool.mypy]
python_version = "3.13"
ignore_errors = true
follow_imports = "silent"
ignore_missing_imports = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.codespell]
skip = './.*,*.csv,*.json,*.lock'
quiet-level = 2
ignore-words-list = "hass"

[pytest]
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.bandit]
skips = ["B101", "B404", "B603"]
